# QSA

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: qsa.yml
benchmarks/: compare_numpy.py  structured_states.cpp
docs/: MATHEMATICS.md  QSC_FORMAT.md  REPO_INTEGRATION.md  VALIDATION.md  VALIDATION_RESULTS.txt
examples/: bell.cpp  bell.py
include/qubit/: c_api.h  qcomplex.hpp  qgrover.hpp  qplan.hpp  qstate.hpp  qsymmetry.hpp  version.h
python/: qubit_native.py
python/qsa/: __init__.py
python/qubit_native/: __init__.py
src/: c_api.cpp  qgrover.cpp  qplan.cpp  qsc.cpp  qstate.cpp  qsymmetry.cpp
tests/: differential_numpy.py  test_qstate.cpp
tools/: scan_dependents.py
